--- a/Klike/Sources/Controllers/KLLoginDetailsViewController.xib
+++ b/Klike/Sources/Controllers/KLLoginDetailsViewController.xib
@@ -23,7 +23,7 @@
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="09A-96-bZZ">
                             <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
-                            <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="calibratedRGB"/>
                         </imageView>
                         <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ggk-Am-tkl">
                             <rect key="frame" x="-23" y="-15" width="46" height="30"/>
@@ -90,7 +90,7 @@
                         </imageView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IxX-UE-sB6">
                             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                            <color key="backgroundColor" red="0.90980392156862744" green="0.92156862745098034" blue="0.94117647058823528" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="backgroundColor" red="0.90980392156862744" green="0.92156862745098034" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="2" id="MDP-FK-QbX"/>
                             </constraints>
@@ -107,7 +107,7 @@
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xU2-R7-IM2">
                             <rect key="frame" x="-23" y="-15" width="46" height="30"/>
-                            <color key="backgroundColor" red="0.3921568627" green="0.40000000000000002" blue="0.79215686269999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="backgroundColor" red="0.39215686274509803" green="0.40000000000000002" blue="0.792156862745098" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="G4p-kV-EL0">
                                     <variation key="widthClass=compact" constant="56"/>
@@ -132,7 +132,7 @@
                                 </mask>
                             </variation>
                         </button>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Full Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="f2m-yn-Tiq">
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="f2m-yn-Tiq" customClass="SFTextField">
                             <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="TuG-rt-4NB"/>
@@ -180,7 +180,7 @@
                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                             <inset key="contentEdgeInsets" minX="0.0" minY="0.0" maxX="16" maxY="0.0"/>
                             <state key="normal" title="None">
-                                <color key="titleColor" red="0.70196078431372544" green="0.70196078431372544" blue="0.74117647058823533" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="titleColor" red="0.70196078431372544" green="0.70196078431372544" blue="0.74117647058823533" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                             <variation key="default">
@@ -199,7 +199,7 @@
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tgk-Hs-bhZ">
                             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                            <color key="backgroundColor" red="0.90980392160000001" green="0.92156862750000001" blue="0.94117647059999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="backgroundColor" red="0.90980392156862744" green="0.92156862745098034" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="2" id="3Cf-Gu-pMJ"/>
                             </constraints>
@@ -287,35 +287,35 @@
                             <exclude reference="MzZ-6m-39e"/>
                         </mask>
                         <mask key="constraints">
+                            <exclude reference="MXe-cc-L0g"/>
                             <exclude reference="IuI-wY-dut"/>
                             <exclude reference="vzJ-Hd-L4K"/>
-                            <exclude reference="3u2-G0-35f"/>
-                            <exclude reference="SwD-vn-tP1"/>
+                            <exclude reference="9HY-mt-x8p"/>
+                            <exclude reference="nXV-KQ-P6m"/>
+                            <exclude reference="qks-r5-jPO"/>
+                            <exclude reference="JUt-6q-fgp"/>
+                            <exclude reference="lVu-gv-EH5"/>
+                            <exclude reference="ld7-Dk-Fgl"/>
+                            <exclude reference="7r1-lU-uc2"/>
+                            <exclude reference="bgH-Xb-rGv"/>
+                            <exclude reference="wqP-Ew-6an"/>
                             <exclude reference="2KN-ca-IEs"/>
                             <exclude reference="AbH-qt-Lqy"/>
                             <exclude reference="Gre-kI-3ZJ"/>
                             <exclude reference="SKD-IG-iyJ"/>
-                            <exclude reference="JUt-6q-fgp"/>
-                            <exclude reference="lVu-gv-EH5"/>
-                            <exclude reference="ld7-Dk-Fgl"/>
+                            <exclude reference="Kyb-EH-5Jb"/>
+                            <exclude reference="3u2-G0-35f"/>
+                            <exclude reference="SwD-vn-tP1"/>
+                            <exclude reference="CgP-2M-m8t"/>
+                            <exclude reference="DNf-cx-y7q"/>
+                            <exclude reference="S8f-Cs-oyn"/>
                             <exclude reference="dYF-ft-443"/>
                             <exclude reference="pZ8-xb-feR"/>
                             <exclude reference="uVA-hq-cfk"/>
                             <exclude reference="ycJ-Dq-45B"/>
-                            <exclude reference="CgP-2M-m8t"/>
-                            <exclude reference="DNf-cx-y7q"/>
-                            <exclude reference="S8f-Cs-oyn"/>
-                            <exclude reference="MXe-cc-L0g"/>
-                            <exclude reference="9HY-mt-x8p"/>
-                            <exclude reference="nXV-KQ-P6m"/>
-                            <exclude reference="qks-r5-jPO"/>
                             <exclude reference="BIp-Ne-mAT"/>
                             <exclude reference="DWY-PR-6M9"/>
                             <exclude reference="Hrh-IQ-dF5"/>
-                            <exclude reference="Kyb-EH-5Jb"/>
-                            <exclude reference="7r1-lU-uc2"/>
-                            <exclude reference="bgH-Xb-rGv"/>
-                            <exclude reference="wqP-Ew-6an"/>
                         </mask>
                     </variation>
                     <variation key="widthClass=compact">
@@ -333,35 +333,35 @@
                             <include reference="MzZ-6m-39e"/>
                         </mask>
                         <mask key="constraints">
+                            <include reference="MXe-cc-L0g"/>
                             <include reference="IuI-wY-dut"/>
                             <include reference="vzJ-Hd-L4K"/>
-                            <include reference="3u2-G0-35f"/>
-                            <include reference="SwD-vn-tP1"/>
+                            <include reference="9HY-mt-x8p"/>
+                            <include reference="nXV-KQ-P6m"/>
+                            <include reference="qks-r5-jPO"/>
+                            <include reference="JUt-6q-fgp"/>
+                            <include reference="lVu-gv-EH5"/>
+                            <include reference="ld7-Dk-Fgl"/>
+                            <include reference="7r1-lU-uc2"/>
+                            <include reference="bgH-Xb-rGv"/>
+                            <include reference="wqP-Ew-6an"/>
                             <include reference="2KN-ca-IEs"/>
                             <include reference="AbH-qt-Lqy"/>
                             <include reference="Gre-kI-3ZJ"/>
                             <include reference="SKD-IG-iyJ"/>
-                            <include reference="JUt-6q-fgp"/>
-                            <include reference="lVu-gv-EH5"/>
-                            <include reference="ld7-Dk-Fgl"/>
+                            <include reference="Kyb-EH-5Jb"/>
+                            <include reference="3u2-G0-35f"/>
+                            <include reference="SwD-vn-tP1"/>
+                            <include reference="CgP-2M-m8t"/>
+                            <include reference="DNf-cx-y7q"/>
+                            <include reference="S8f-Cs-oyn"/>
                             <include reference="dYF-ft-443"/>
                             <include reference="pZ8-xb-feR"/>
                             <include reference="uVA-hq-cfk"/>
                             <include reference="ycJ-Dq-45B"/>
-                            <include reference="CgP-2M-m8t"/>
-                            <include reference="DNf-cx-y7q"/>
-                            <include reference="S8f-Cs-oyn"/>
-                            <include reference="MXe-cc-L0g"/>
-                            <include reference="9HY-mt-x8p"/>
-                            <include reference="nXV-KQ-P6m"/>
-                            <include reference="qks-r5-jPO"/>
                             <include reference="BIp-Ne-mAT"/>
                             <include reference="DWY-PR-6M9"/>
                             <include reference="Hrh-IQ-dF5"/>
-                            <include reference="Kyb-EH-5Jb"/>
-                            <include reference="7r1-lU-uc2"/>
-                            <include reference="bgH-Xb-rGv"/>
-                            <include reference="wqP-Ew-6an"/>
                         </mask>
                     </variation>
                 </view>
