--- a/Klike/Sources/Controllers/KLLoginDetailsViewController.xib
+++ b/Klike/Sources/Controllers/KLLoginDetailsViewController.xib
@@ -93,7 +93,9 @@
                             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                             <color key="backgroundColor" red="0.90980392156862744" green="0.92156862745098034" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="2" id="MDP-FK-QbX"/>
+                                <constraint firstAttribute="height" constant="2" id="MDP-FK-QbX">
+                                    <variation key="widthClass=compact" constant="1"/>
+                                </constraint>
                             </constraints>
                             <variation key="default">
                                 <mask key="constraints">
@@ -202,7 +204,9 @@
                             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                             <color key="backgroundColor" red="0.90980392156862744" green="0.92156862745098034" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="2" id="3Cf-Gu-pMJ"/>
+                                <constraint firstAttribute="height" constant="2" id="3Cf-Gu-pMJ">
+                                    <variation key="widthClass=compact" constant="1"/>
+                                </constraint>
                             </constraints>
                             <variation key="default">
                                 <mask key="constraints">
