--- a/Klike/Sources/Controllers/KLSignUpViewController.xib
+++ b/Klike/Sources/Controllers/KLSignUpViewController.xib
@@ -163,7 +163,7 @@
                                 </constraint>
                             </constraints>
                             <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="16"/>
-                            <state key="normal" title="Sign Up">
+                            <state key="normal" title="Join">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
