--- a/Klike/Sources/Controllers/KLLoginViewController.xib
+++ b/Klike/Sources/Controllers/KLLoginViewController.xib
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KLLoginViewController">
             <connections>
+                <outlet property="NavBarContraint" destination="IDF-Mr-cuP" id="tq5-65-Vun"/>
                 <outlet property="countryCodeButton" destination="AQW-fj-NY4" id="e2D-Na-1WW"/>
+                <outlet property="fakeNavBar" destination="fWa-CP-naC" id="lM6-Df-mKW"/>
+                <outlet property="joinPanelTutorialConstraint" destination="ZzW-vm-ff2" id="PgJ-vr-nHS"/>
+                <outlet property="joinPanelView" destination="i64-uT-yg5" id="h7i-xT-v4v"/>
                 <outlet property="tutorialViewContainer" destination="Pok-Ih-FNc" id="oI3-cz-OHr"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -16,7 +21,7 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pok-Ih-FNc">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pok-Ih-FNc" userLabel="TutorialView">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="400"/>
                     <color key="backgroundColor" red="0.14901960784313725" green="0.14901960784313725" blue="0.2196078431372549" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
@@ -34,7 +39,7 @@
                         </mask>
                     </variation>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="i64-uT-yg5">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="i64-uT-yg5" userLabel="JoinPanel">
                     <rect key="frame" x="0.0" y="400" width="600" height="200"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AQW-fj-NY4">
@@ -102,7 +107,7 @@
                             </constraints>
                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                             <inset key="titleEdgeInsets" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
-                            <state key="normal" title="Mobile number">
+                            <state key="normal" title="Mobile Number">
                                 <color key="titleColor" red="0.53333333333333333" green="0.54117647058823526" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
@@ -191,12 +196,10 @@
                     </subviews>
                     <color key="backgroundColor" red="0.34901960784313724" green="0.35686274509803922" blue="0.75686274509803919" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="bottom" secondItem="AQW-fj-NY4" secondAttribute="bottom" constant="145" id="01c-6o-VtU"/>
                         <constraint firstAttribute="trailing" secondItem="9gZ-5Z-O5m" secondAttribute="trailing" id="0OO-2f-Oj8"/>
-                        <constraint firstAttribute="bottom" secondItem="yxn-cO-Lds" secondAttribute="bottom" constant="20" id="4yB-9D-GRU"/>
                         <constraint firstItem="Pmi-Zj-jbf" firstAttribute="leading" secondItem="i64-uT-yg5" secondAttribute="leading" constant="16" id="Eoz-gD-YK0"/>
                         <constraint firstItem="AQW-fj-NY4" firstAttribute="top" secondItem="i64-uT-yg5" secondAttribute="top" constant="20" id="Fwh-uD-GN9">
-                            <variation key="widthClass=compact" constant="12"/>
+                            <variation key="widthClass=compact" constant="13"/>
                         </constraint>
                         <constraint firstAttribute="bottom" secondItem="9gZ-5Z-O5m" secondAttribute="bottom" id="G3p-BA-K28"/>
                         <constraint firstItem="Pmi-Zj-jbf" firstAttribute="top" secondItem="yxn-cO-Lds" secondAttribute="bottom" constant="7" id="HGL-jU-Ge7">
@@ -205,7 +208,6 @@
                         <constraint firstItem="yxn-cO-Lds" firstAttribute="bottom" secondItem="v0c-Kk-TeQ" secondAttribute="bottom" constant="-16" id="PE1-at-brr">
                             <variation key="widthClass=compact" constant="13"/>
                         </constraint>
-                        <constraint firstAttribute="height" constant="160" id="QK1-a7-bSC"/>
                         <constraint firstAttribute="trailing" secondItem="oNp-ts-Lnz" secondAttribute="trailing" constant="16" id="S6m-gG-wvc"/>
                         <constraint firstItem="oNp-ts-Lnz" firstAttribute="top" secondItem="Pmi-Zj-jbf" secondAttribute="bottom" constant="7" id="UOF-he-3zO"/>
                         <constraint firstItem="yxn-cO-Lds" firstAttribute="top" secondItem="i64-uT-yg5" secondAttribute="top" constant="7" id="XSa-H9-LsT">
@@ -215,19 +217,20 @@
                             <variation key="widthClass=compact" constant="0.0"/>
                         </constraint>
                         <constraint firstItem="aS3-LI-wzg" firstAttribute="bottom" secondItem="AQW-fj-NY4" secondAttribute="bottom" constant="12" id="ZTz-H7-71I">
-                            <variation key="widthClass=compact" constant="-14"/>
+                            <variation key="widthClass=compact" constant="-15"/>
                         </constraint>
                         <constraint firstAttribute="trailing" secondItem="yxn-cO-Lds" secondAttribute="trailing" constant="16" id="efO-Gg-RFu"/>
                         <constraint firstItem="aS3-LI-wzg" firstAttribute="trailing" secondItem="AQW-fj-NY4" secondAttribute="trailing" constant="56" id="guF-me-yJK">
-                            <variation key="widthClass=compact" constant="-8"/>
+                            <variation key="widthClass=compact" constant="-9"/>
                         </constraint>
                         <constraint firstAttribute="trailing" secondItem="Pmi-Zj-jbf" secondAttribute="trailing" constant="16" id="mFI-E8-FXc"/>
                         <constraint firstItem="oNp-ts-Lnz" firstAttribute="leading" secondItem="i64-uT-yg5" secondAttribute="leading" constant="16" id="mxU-wr-KLA"/>
                         <constraint firstItem="9gZ-5Z-O5m" firstAttribute="leading" secondItem="i64-uT-yg5" secondAttribute="leading" id="p4V-QB-O4q"/>
-                        <constraint firstItem="yxn-cO-Lds" firstAttribute="leading" secondItem="AQW-fj-NY4" secondAttribute="trailing" id="u9d-3v-RqO"/>
-                        <constraint firstItem="9gZ-5Z-O5m" firstAttribute="top" secondItem="oNp-ts-Lnz" secondAttribute="bottom" constant="7" id="uMO-6O-xIh"/>
+                        <constraint firstItem="yxn-cO-Lds" firstAttribute="leading" secondItem="AQW-fj-NY4" secondAttribute="trailing" id="u9d-3v-RqO">
+                            <variation key="widthClass=compact" constant="-1"/>
+                        </constraint>
                         <constraint firstItem="AQW-fj-NY4" firstAttribute="leading" secondItem="i64-uT-yg5" secondAttribute="leading" constant="16" id="uvS-oM-utO">
-                            <variation key="widthClass=compact" constant="0.0"/>
+                            <variation key="widthClass=compact" constant="1"/>
                         </constraint>
                     </constraints>
                     <variation key="default">
@@ -238,18 +241,14 @@
                             <exclude reference="9gZ-5Z-O5m"/>
                         </mask>
                         <mask key="constraints">
-                            <exclude reference="QK1-a7-bSC"/>
                             <exclude reference="0OO-2f-Oj8"/>
                             <exclude reference="G3p-BA-K28"/>
                             <exclude reference="p4V-QB-O4q"/>
-                            <exclude reference="uMO-6O-xIh"/>
                             <exclude reference="S6m-gG-wvc"/>
                             <exclude reference="UOF-he-3zO"/>
                             <exclude reference="mxU-wr-KLA"/>
                             <exclude reference="ZTz-H7-71I"/>
                             <exclude reference="guF-me-yJK"/>
-                            <exclude reference="01c-6o-VtU"/>
-                            <exclude reference="4yB-9D-GRU"/>
                             <exclude reference="PE1-at-brr"/>
                             <exclude reference="XXa-3r-xK0"/>
                         </mask>
@@ -262,11 +261,9 @@
                             <include reference="9gZ-5Z-O5m"/>
                         </mask>
                         <mask key="constraints">
-                            <exclude reference="QK1-a7-bSC"/>
                             <include reference="0OO-2f-Oj8"/>
                             <include reference="G3p-BA-K28"/>
                             <include reference="p4V-QB-O4q"/>
-                            <include reference="uMO-6O-xIh"/>
                             <include reference="S6m-gG-wvc"/>
                             <include reference="UOF-he-3zO"/>
                             <include reference="mxU-wr-KLA"/>
@@ -277,22 +274,137 @@
                         </mask>
                     </variation>
                 </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fWa-CP-naC" userLabel="NavBar">
+                    <rect key="frame" x="-12" y="3" width="253" height="80"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="JOIIN" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fhf-dd-CWd">
+                            <rect key="frame" x="191" y="29" width="42" height="21"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="21" id="QFy-dI-auG"/>
+                                <constraint firstAttribute="width" constant="42" id="hIn-z1-SL3"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="16"/>
+                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                            <variation key="default">
+                                <mask key="constraints">
+                                    <exclude reference="QFy-dI-auG"/>
+                                    <exclude reference="hIn-z1-SL3"/>
+                                </mask>
+                            </variation>
+                            <variation key="widthClass=compact">
+                                <mask key="constraints">
+                                    <include reference="QFy-dI-auG"/>
+                                    <include reference="hIn-z1-SL3"/>
+                                </mask>
+                            </variation>
+                        </label>
+                        <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6GT-CW-Xh8">
+                            <rect key="frame" x="20" y="20" width="40" height="40"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="40" id="1Bp-e0-SGk"/>
+                                <constraint firstAttribute="width" constant="40" id="Zho-8W-T92"/>
+                            </constraints>
+                            <state key="normal" image="ic_ar_back">
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <variation key="default">
+                                <mask key="constraints">
+                                    <exclude reference="1Bp-e0-SGk"/>
+                                    <exclude reference="Zho-8W-T92"/>
+                                </mask>
+                            </variation>
+                            <variation key="widthClass=compact">
+                                <mask key="constraints">
+                                    <include reference="1Bp-e0-SGk"/>
+                                    <include reference="Zho-8W-T92"/>
+                                </mask>
+                            </variation>
+                            <connections>
+                                <action selector="onFakeBackButton:" destination="-1" eventType="touchUpInside" id="6eT-3W-Ehq"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" red="0.34901960780000002" green="0.35294117650000001" blue="0.74117647060000003" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstItem="Fhf-dd-CWd" firstAttribute="top" secondItem="fWa-CP-naC" secondAttribute="top" constant="31" id="GkI-R8-RIV"/>
+                        <constraint firstAttribute="centerX" secondItem="Fhf-dd-CWd" secondAttribute="centerX" id="JCa-sD-XDc"/>
+                        <constraint firstItem="6GT-CW-Xh8" firstAttribute="leading" secondItem="fWa-CP-naC" secondAttribute="leading" constant="7" id="P7Z-Nk-UHC"/>
+                        <constraint firstItem="6GT-CW-Xh8" firstAttribute="top" secondItem="fWa-CP-naC" secondAttribute="top" constant="23" id="Q5P-Z7-NWT"/>
+                        <constraint firstAttribute="height" constant="80" id="t5B-1w-FHW">
+                            <variation key="widthClass=compact" constant="64"/>
+                        </constraint>
+                    </constraints>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="t5B-1w-FHW"/>
+                            <exclude reference="P7Z-Nk-UHC"/>
+                            <exclude reference="Q5P-Z7-NWT"/>
+                            <exclude reference="GkI-R8-RIV"/>
+                            <exclude reference="JCa-sD-XDc"/>
+                        </mask>
+                    </variation>
+                    <variation key="widthClass=compact">
+                        <mask key="constraints">
+                            <include reference="t5B-1w-FHW"/>
+                            <include reference="P7Z-Nk-UHC"/>
+                            <include reference="Q5P-Z7-NWT"/>
+                            <include reference="GkI-R8-RIV"/>
+                            <include reference="JCa-sD-XDc"/>
+                        </mask>
+                    </variation>
+                </view>
             </subviews>
             <color key="backgroundColor" red="0.34901960784313724" green="0.35686274509803922" blue="0.75686274509803919" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="Pok-Ih-FNc" secondAttribute="trailing" id="CQe-25-l50"/>
-                <constraint firstItem="i64-uT-yg5" firstAttribute="top" secondItem="Pok-Ih-FNc" secondAttribute="bottom" id="MAC-mg-TEd"/>
+                <constraint firstItem="fWa-CP-naC" firstAttribute="bottom" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="-64" id="IDF-Mr-cuP">
+                    <variation key="widthClass=compact" constant="0.0"/>
+                </constraint>
+                <constraint firstItem="fWa-CP-naC" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="-4" id="LFG-yg-MZj">
+                    <variation key="widthClass=compact" constant="0.0"/>
+                </constraint>
+                <constraint firstAttribute="trailing" secondItem="fWa-CP-naC" secondAttribute="trailing" constant="347" id="T8R-Av-to3">
+                    <variation key="widthClass=compact" constant="0.0"/>
+                </constraint>
                 <constraint firstAttribute="bottom" secondItem="i64-uT-yg5" secondAttribute="bottom" id="XgS-Da-kql"/>
                 <constraint firstItem="i64-uT-yg5" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Xgv-cC-VkZ"/>
+                <constraint firstItem="i64-uT-yg5" firstAttribute="top" secondItem="Pok-Ih-FNc" secondAttribute="bottom" id="ZzW-vm-ff2"/>
                 <constraint firstItem="Pok-Ih-FNc" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="j9l-oe-zsz"/>
                 <constraint firstAttribute="trailing" secondItem="i64-uT-yg5" secondAttribute="trailing" id="kkF-fp-98U"/>
+                <constraint firstAttribute="bottom" secondItem="Pok-Ih-FNc" secondAttribute="bottom" constant="163" id="ud5-sW-6zL"/>
                 <constraint firstItem="Pok-Ih-FNc" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="vPi-iD-L7w"/>
             </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
-            <point key="canvasLocation" x="454" y="523"/>
+            <variation key="default">
+                <mask key="subviews">
+                    <exclude reference="fWa-CP-naC"/>
+                </mask>
+                <mask key="constraints">
+                    <exclude reference="ud5-sW-6zL"/>
+                    <exclude reference="IDF-Mr-cuP"/>
+                    <exclude reference="LFG-yg-MZj"/>
+                    <exclude reference="T8R-Av-to3"/>
+                    <exclude reference="ZzW-vm-ff2"/>
+                </mask>
+            </variation>
+            <variation key="widthClass=compact">
+                <mask key="subviews">
+                    <include reference="fWa-CP-naC"/>
+                </mask>
+                <mask key="constraints">
+                    <include reference="ud5-sW-6zL"/>
+                    <include reference="IDF-Mr-cuP"/>
+                    <include reference="LFG-yg-MZj"/>
+                    <include reference="T8R-Av-to3"/>
+                    <include reference="ZzW-vm-ff2"/>
+                </mask>
+            </variation>
+            <point key="canvasLocation" x="384" y="404"/>
         </view>
     </objects>
     <resources>
+        <image name="ic_ar_back" width="24" height="23"/>
         <image name="ic_ardown" width="8" height="5"/>
         <image name="slash" width="3" height="8"/>
     </resources>
